--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>DavelabNet</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
+  <%= render ('layouts/head') %>
 </head>
 <body>
 
-<%= yield %>
+  <%#= render('layouts/header') %>
+  <%#= render('layouts/sub_header') %>
+
+<div class="container">
+  <%= yield %>
+</div>
 
 </body>
 </html>
