--- a/app/views/works/_form.html.erb
+++ b/app/views/works/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@work) do |f| %>
+<%= form_for @work,  :html => {:multipart => true} do |f| %>
   <% if @work.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@work.errors.count, "error") %> prohibited this work from being saved:</h2>
@@ -23,6 +23,20 @@
     <%= f.label :description %><br />
     <%= f.text_area :description %>
   </div>
+
+<%- @work.images.each do |image| %>
+  <%= image_tag image.url(:small) %>
+<% end %>
+
+
+  <%= form.fields_for :images do |image_form| %>
+    <p>
+      <%= image_form.label :image %>
+      <%= image_form.file_field :attachment %>
+    </p>
+  <% end %>
+
+    
   <div class="field">
     <%= f.label :link %><br />
     <%= f.text_field :link %>
