--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -1,11 +1,13 @@
-  <title>DavelabNet</title>
-  <%= stylesheet_link_tag "blueprint/screen", :media => "screen"  %>
-  <%= stylesheet_link_tag "blueprint/print", :media => "print"  %>
-  <!--[if lt IE 8]><%= stylesheet_link_tag "blueprint/ie", :media => "screen"  %><![endif]-->
-  <%= stylesheet_link_tag "custom", :media => "screen"  %>
+<title>DavelabNet</title>
+<%= stylesheet_link_tag "blueprint/screen", :media => "screen"  %>
+<%= stylesheet_link_tag "blueprint/print", :media => "print"  %>
+<%= stylesheet_link_tag "facebox", :media => "screen"  %>
+<!--[if lt IE 8]><%= stylesheet_link_tag "blueprint/ie", :media => "screen"  %><![endif]-->
+<%= stylesheet_link_tag "custom", :media => "screen"  %>
 
-  <%= javascript_include_tag :defaults %>
-  <!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-  <%= csrf_meta_tag %>
+<%= javascript_include_tag "rails_admin/jquery-1.5.1.min" %>
+<!--[if lt IE 9]>
+<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+<%= csrf_meta_tag %>
+
