--- a/app/views/layouts/_sub_header.html.erb
+++ b/app/views/layouts/_sub_header.html.erb
@@ -1,3 +1,5 @@
 <section id="sub_header">
-
+            <div id="cont_light">
+                <div id="cont_player"></div>
+            </div>
 </section>
