--- a/app/views/works/_form.html.erb
+++ b/app/views/works/_form.html.erb
@@ -29,7 +29,7 @@
 <% end %>
 
 
-  <%= form.fields_for :images do |image_form| %>
+  <%= f.fields_for :images do |image_form| %>
     <p>
       <%= image_form.label :image %>
       <%= image_form.file_field :attachment %>
