notice and alerts with style and animation

--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -2,10 +2,13 @@
 <%= stylesheet_link_tag "blueprint/screen", :media => "screen"  %>
 <%= stylesheet_link_tag "blueprint/print", :media => "print"  %>
 <%= stylesheet_link_tag "facebox", :media => "screen"  %>
+<%= stylesheet_link_tag 'jquery.notifyBar' %>
 <!--[if lt IE 8]><%= stylesheet_link_tag "blueprint/ie", :media => "screen"  %><![endif]-->
 <%= stylesheet_link_tag "custom", :media => "screen"  %>
 
 <%= javascript_include_tag "rails_admin/jquery-1.5.1.min" %>
+<%= javascript_include_tag 'jquery.flashanimation' %>
+
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
