--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,17 +5,21 @@
 </head>
 <body>
 
+<% if notice  %>
+  <div class="alert_flash"><img src="/images/success.png" alt="success" align="absmiddle"/> <%= notice %></div>
+<%  end %>
+
+<% if alert  %>
+  <div class="alert_flash"><img src="/images/alert.png" alt="alert" align="absmiddle"/><%=  alert %></div>
+<%  end %>
+
+
   <%= render('layouts/header') %>
   <%= render('layouts/sub_header') %>
 
 <div class="container" id="main">
 
-<% if notice  %>
-<p class="notice"><%= notice %></p>
-<%  end %>
-<% if alert  %>
-<p class="alert"><%= alert %></p>
-<%  end %>
+
 
   <%= yield %>
 </div>
