--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -192,3 +192,35 @@ input[type=submit].sub_circular{
 
 
 /**----------------------**/
+
+.alert_flash{
+  overflow: hidden;
+  z-index: 999;
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0.08, rgb(196,10,84)),
+    color-stop(0.54, rgb(248,25,111))
+);
+background-image: -moz-linear-gradient(
+    center bottom,
+    rgb(196,10,84) 8%,
+    rgb(248,25,111) 54%
+);
+-webkit-box-shadow: 0px 3px 3px #525252;
+-moz-box-shadow: 0px 3px 3px #525252;
+box-shadow: 0px 3px 3px #525252; 
+
+  height: 0;
+  color: #fff;
+  padding: 15px 0;
+  text-shadow: rgba(0,0,0,.75) 1px 1px 1px;
+  font-size: 18px;
+
+}
