add/remove input file + need bugfix for destroy method

--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -1,14 +1,26 @@
 <title>DavelabNet</title>
+
+<!-- stylesheet -->
 <%= stylesheet_link_tag "blueprint/screen", :media => "screen"  %>
 <%= stylesheet_link_tag "blueprint/print", :media => "print"  %>
 <!--[if lt IE 8]><%= stylesheet_link_tag "blueprint/ie", :media => "screen"  %><![endif]-->
 <%= stylesheet_link_tag "custom", :media => "screen"  %>
 
+
+<!-- general jquery -->
 <%= javascript_include_tag "rails_admin/jquery-1.5.1.min" %>
 <%= javascript_include_tag 'jquery.flashanimation' %>
+
+<!-- all plupload -->
+
+
+
+<%= javascript_include_tag 'application' %>
+
 
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 <%= csrf_meta_tag %>
 
+ 
