--- a/app/views/works/_form.html.erb
+++ b/app/views/works/_form.html.erb
@@ -13,7 +13,12 @@
 
   <div class="field">
     <%= f.label :category_id %><br />
-    <%= f.text_field :category_id %>
+    <%= f.collection_select(:category_id,
+                           Category.all,
+                           :id,
+                           :name,
+                          { :prompt => true })
+  %>
   </div>
   <div class="field">
     <%= f.label :name %><br />
@@ -24,19 +29,15 @@
     <%= f.text_area :description %>
   </div>
 
-<%- @work.images.each do |image| %>
-  <%= image_tag image.url(:small) %>
-<% end %>
-
-
-  <%= f.fields_for :images do |image_form| %>
-    <p>
-      <%= image_form.label :image %>
-      <%= image_form.file_field :attachment %>
-    </p>
+  <!-- nasted images form -->
+  <%= f.fields_for :images do |builder| %>
+    <%= render 'image_fields', :f => builder %>
   <% end %>
 
-    
+
+ <p><%= link_to_add_fields "Add Images", f, :images %></p>
+ <!-- end nasted images form -->
+
   <div class="field">
     <%= f.label :link %><br />
     <%= f.text_field :link %>
