--- a/app/views/works/index.html.erb
+++ b/app/views/works/index.html.erb
@@ -21,7 +21,7 @@
     <td><%= work.realized_at %></td>
     <td><%= link_to 'Show', work %></td>
     <td><%= link_to 'Edit', edit_work_path(work) %></td>
-    <td><%= link_to 'Destroy', work, :confirm => 'Are you sure?', :method => :delete %></td>
+ <td><%= link_to "Delete", work, :method => :delete, :confirm => "are u sure?" %></td>
   </tr>
 <% end %>
 </table>
