upload images and resize in work model

--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -8,13 +8,10 @@
 
 
 <!-- general jquery -->
-<%= javascript_include_tag "rails_admin/jquery-1.5.1.min" %>
+<%= javascript_include_tag :defaults %>
+<!-- general jquery -->
+
 <%= javascript_include_tag 'jquery.flashanimation' %>
-
-<!-- all plupload -->
-
-
-
 <%= javascript_include_tag 'application' %>
 
 
